2000-10-25  Radek Doulik  <rodo@helixcode.com>

	* htmlclueflow.c (html_clueflow_spell_check): likewise

	* gtkhtml.c (command): use editor_data instead of spell_data

	* htmlclueflow.c (html_clueflow_spell_check): likewise

	* gtkhtml.c (init): likewise
	(command): likewise

	* htmlengine.c (html_engine_spell_check): use editor_api

	* gtkhtml.c (gtk_html_set_editor_api): updated to set EditorAPI

	* gtkhtml.h (struct _GtkHTMLEditorAPI): extend EditSpellAPI to
	general EditorAPI

	* gtkhtml-properties.c: added new commands

	* gtkhtml.h: added new editor commands for popup menu and property
	dialog

2000-10-24  Radek Doulik  <rodo@helixcode.com>

	* htmlengine-save.c (get_body): added background attribute

2000-10-23  Radek Doulik  <rodo@helixcode.com>

	* htmlengine.c (parse_d): set divAlign to left before parsing
	actual alignment
	(parse_p): likewise

	* htmlengine-edit.h: publicate in scope of gtkhtml sources some
	usefull functions for translating between types

	* htmlengine-save.c (html_engine_save_get_paragraph_style): new
	helper function
	(html_engine_save_get_paragraph_align): likewise

	* htmlclueflow.c (save): fixed typo

	* gtkhtml.h: gtk_html_load_from_string const safe

	* htmlengine.c (parse_one_token): commented out warning

	* gtkhtml.c (cursor_move): not abort with bad params, only warn
	(move_selection): likewise
	(scroll): likewise
	(gtk_marshal_NONE__INT_INT_FLOAT): added new marshaler

2000-10-20  Radek Doulik  <rodo@helixcode.com>

	* htmlengine-save.c (html_engine_save_get_sample_body): new
	function, used by component for sample views
	(get_body): helper function extracted from write_header
	(write_header): use get_body

	* htmlengine-edit-insert.c (html_engine_insert): try to make magic
	links also after '>', ')' - this could simplify of mail adresses,
	for example Ape <primate@helixcode.com> should do the right thing
	now ;-)

	* htmlengine-edit.c (html_is_in_word): changed back from isalnum
	to isalpha
